# pytorch-docs-refactored

./: .gitignore  README.md  environment.yml  minimal_env.yml  pyproject.toml  register_mcp.sh  run_mcp.sh  run_mcp_uvx.sh  setup.py
docs/: DEBUGGING_REPORT.md  FIXES_SUMMARY.md  INTEGRATION_PLAN.md  MCP_INTEGRATION.md  MIGRATION_REPORT.md  refactoring_implementation_summary.md  refactoring_results.md
mcp_server_pytorch/: __init__.py  __main__.py
ptsearch/: __init__.py  server.py
ptsearch/config/: __init__.py  settings.py
ptsearch/core/: __init__.py  database.py  embedding.py  formatter.py  search.py
ptsearch/protocol/: __init__.py  descriptor.py  handler.py
ptsearch/transport/: __init__.py  base.py  sse.py  stdio.py
ptsearch/utils/: __init__.py  compat.py  error.py  logging.py
scripts/: embed.py  index.py  process.py  search.py  server.py
