[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-pytorch"
version = "0.1.0"
description = "A Model Context Protocol server providing PyTorch documentation search capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "flask>=2.2.3",
    "openai>=1.2.4",
    "chromadb>=0.4.18",
    "tree-sitter>=0.20.1",
    "tree-sitter-languages>=1.7.0", 
    "python-dotenv>=1.0.0",
    "flask-cors>=3.0.10",
    "mcp>=1.1.3"
]

[project.scripts]
mcp-server-pytorch = "mcp_server_pytorch:main"

[tool.setuptools.packages.find]
include = ["mcp_server_pytorch", "ptsearch"]
